styles/forms.css
/*
 * Form Input Types - https://developer.mozilla.org/en-US/docs/Learn/Forms/HTML5_input_types
 * Form Validation - https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation
 * Web Aim Creating Accessible Forms - https://webaim.org/techniques/forms/controls
 * Styling Web Forms - https://developer.mozilla.org/en-US/docs/Learn/Forms/Styling_web_forms
 * Advanced Form Styling - https://developer.mozilla.org/en-US/docs/Learn/Forms/Advanced_form_stylin
 * Styling Form Pseudo Elements - https://www.tjvantoll.com/2013/04/15/list-of-pseudo-elements-to-style-form-controls/#input_range
 *
 * Web Form Usability (Top 10 Practices) - https://www.nngroup.com/articles/web-form-design
 * A Form of Madness - http://diveintohtml5.info/forms.html
 * Styling - https://www.quirksmode.org/blog/archives/2017/12/native_form_val.html
 */

/* Viewport Sizes - https://docs.adobe.com/content/help/en/target/using/experiences/vec/mobile-viewports.html */
@media screen and (min-width: 786px) { :root { } }

/* accessible placeholders & labels - https://www.nngroup.com/articles/form-design-placeholders/ */
::placeholder { } /* 4.5:1 contrast ratio for ARIA */

/* Remove tapping delay
 *   https://css-tricks.com/almanac/properties/t/touch-action/
 *   https://developer.mozilla.org/en-US/docs/Web/CSS/touch-action
 */
a, area, button, input, label, select, summary, textarea, [tabindex] {
  -ms-touch-action: manipulation;
  touch-action:     manipulation
}


/* Form proximity effect
     - https://www.nngroup.com/articles/form-design-white-space/?lm=form-design-placeholders&pt=article
*/
form {
  margin: var(--margin);
  width: 100%;
  max-width: var(--max-width);
  flex-direction: var(--flex-direction);
  caret-color: currentcolor; /* https://developer.mozilla.org/en-US/docs/Web/CSS/caret-color */
}
form:focus-within { }
fieldset:focus-within { }
/*
  - https://thatemil.com/blog/2017/07/01/fixing-fieldsets/
  - https://adrianroselli.com/2022/07/use-legend-and-fieldset.html
*/
fieldset {
   /* box-sizing: border-box; */
   max-width: 100%;

   /* See https://github.com/twbs/bootstrap/issues/12359 */
   /* border: solid currentColor; */

  /* THIS IS A BUG - https://bugs.chromium.org/p/chromium/issues/detail?id=375693 */
   /* border: none; */
   margin: var(--margin);
}
fieldset[disabled] {}
legend { /* https://thatemil.com/blog/2017/07/01/fixing-fieldsets/ */
  border: inherit;
  background: inherit;
  /* display: contents; */
}
fieldset input
  { }
fieldset ul, fieldset ol, fieldset dl
  { }
fieldset li
  { }

form details {
  padding: 0;
}
label {
  background:  green;
  display: block;
  display: inline-block;
  display: inline-flex;
  /* justify-content: flex-end; */
  flex-direction: var(--flex-direction);
  /* padding: 1ch; */
  text-align: var(--text-align);
  box-sizing: border-box;
}
label code {
}
label, label + input {
  /* margin: var(--margin-collapse-bugfix) auto var(--margin); */
  /* padding: var(--margin-collapse-bugfix) var(--line-height); */
  margin: 0 1ch;
  display: block;
  width: 100%;
  width: -webkit-fill-available;
}
label + input {
  background: purple;
  padding: 0;
}
label + :not(input) {
  clear: both;
}
:not(li) > label {
}

:placeholder-shown {
  text-overflow: ellipsis;
}

button, [role=button], input, select, textarea {
  color: currentColor;
  font-family: inherit;
  letter-spacing: inherit;
  text-align: var(--text-align);
  box-sizing: border-box;
  /*
   * Fix rounded corners in iOS Safari https://github.com/twbs/bootstrap/issues/11586.
   * appearance
   *   - https://developer.mozilla.org/en-US/docs/Web/CSS/appearance
   *   - https://developer.mozilla.org/en-US/docs/Learn/Forms/Advanced_form_styling#appearance_controlling_OS-level_styling
   */
  -webkit-appearance: none;
          appearance: none;
}

output, select, textarea,
input:not([type]), input[type=text], input[type=password], input[type=search], input[type=file],
input[type=color], input[type=url], input[type=email], input[type=tel], input[type=number], input[type=range],
input[type=date], input[type=time], input[type=datetime], input[type=datetime-local], input[type=month], input[type=week]
{ /* https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input#%3Cinput%3E_types */
  /* width: 100%; */
  /* max-width: var(--line-length); */
  display: inline-block;
  /* list-style-position: inside; */
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: var(
  --font-size);
  border: solid currentColor;
  border-width: 0 0 0.1em;
  /* padding: 0 var(--line-height); */
  line-height: var(
  --line-height);
  /* margin: var(--margin-collapse-bugfix) auto var(--margin); */
  -webkit-user-select: text; /* Safari - https://caniuse.com/?search=user-select */
  user-select: text; /* https://developer.mozilla.org/en-US/docs/Web/CSS/user-select */
  box-sizing: border-box;
  vertical-align: text-top;
}


label output, label select, label textarea, label [type], label input:not([type]) {grid-column: 2;width: calc((var(--GOLDEN-RATIO) - 1) * 100%);}

[type=file] + output {
  /* display: inline; */
  background: red;
  border-width: 0.1618em;
}
[type=search] {
    margin: 0;
    flex: 1 50%;
    padding: 0 1em;
    background: none;
    text-align: left;
    outline-offset: -2px;
    -webkit-appearance: textfield;
            appearance: textfield;
}
/* Remove the inner padding in Chrome and Safari on macOS. */
[type=search]::-webkit-search-decoration
 { -webkit-appearance: none }
/* Remove 'x' icon from search */
[type=search]::-webkit-search-cancel-button { }
[role=search] {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  background: green;
  border-bottom: 0.1em solid;
}
[role=search] label {
  background: pink;
  flex: 1 100%;
  font-size: 1em;
  text-align: left;
  height: 1em;
  line-height: 1em;
}
[role=search]
  [type=search] {
    height: 2em;
    font-size: 1em;
    line-height: 2em;
    border-bottom: none;
    animation: none !important;
    border-top: 1em solid rgba(0,0,0,0.001);
  }
/* ... */

